# shortify

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py  shortener.py  tasks.py
backend/app/db/: mongodb.py  redis.py
backend/app/models/: url.py
frontend/: .dockerignore  Dockerfile  next.config.js  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  providers.tsx  url-shortener.tsx
